openshift/obp.yaml
apiVersion: v1
kind: Service
apiVersion: v1
metadata:
    name: obpapi-service
spec:
    selector:
        app: obpapi
    ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    type: LoadBalancer
---

apiVersion: apps/v1
kind: Deployment
metadata:
    name: obp-deployment
    labels:
        app: obpapi
spec:
    replicas: 1
    selector:
        matchLabels:
            app: obpapi
    template:
        metadata:
            labels:
                app: obpapi
        spec:
            containers:
            - name: obpapi
              #image: openbankproject/obp-api # docker build -t obpapi-kube .
              image: index.docker.io/chrisjsimpson/obpapi-kube
              resources:
                requests:
                  memory: "700Mi"
              ports:
              - containerPort: 8080
                name: http
---

apiVersion: v1
kind: Service
metadata:
    name: postgres-service
spec:
    selector:
        app: postgres
    ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---

apiVersion: apps/v1
kind: Deployment

metadata:
    name: postgres
    labels:
        app: postgres
spec:
    replicas: 1
    selector:
        matchLabels:
            app: postgres
    template:
        metadata:
            labels:
                app: postgres
        spec:
            containers:
            - name: postgres
              image: centos/postgresql-10-centos7
              resources:
                requests:
                    memory: "200Mi"
              volumeMounts:
              - name: postgres-volume
                mountPath: "/var/lib/postgresql/data"
              ports:
              - containerPort: 5432
            volumes:
                - name: postgres-volume
                  persistentVolumeClaim:
                    claimName: postgres-volume-claim
