openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: obp-frontend
spec:
  to:
    kind: Service
    name: obpapi-service
